Update Navbar hover effect, main card background color and card body size and shadow color changed. The theme is dark gray mainly.

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background-color: #1e40af; 
+  background-color: #1f222c; 
   color: white;
   position: fixed;
   top: 0;
@@ -17,14 +17,21 @@
 }
 
 .nav-button {
-  color: white;
+  color: rgba(255, 255, 255, 0.699);
   text-decoration: none;
   font-weight: 500;
   font-size: 1rem;
   transition: color 0.3s ease;
+  padding: 5px;
 }
 
 .nav-button:hover {
   color: #93c5fd; 
-  text-decoration: underline;
+  text-decoration: none;
+  text-decoration-thickness: 2px;
+  text-decoration-style: solid;
+  background-color: rgba(128, 128, 128, 0.507);
+  border-radius: 15px;
+  box-sizing: border-box;
+  padding: 5px;
 }
