--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ html, body {
 body {
   margin: 0;
   font-family: sans-serif;
-  background-color: #f5f5f5;
+  background-color: #1f222c;
 }
 main {
   width: 100vw;
@@ -27,10 +27,10 @@ main {
 
 .card {
   background-color: white;
-  padding: 2rem 3rem;
+  padding: 5rem 1rem;
   border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  max-width: 500px;
+  box-shadow: 0 2px 10px lightblue;
+  max-width: 1000px;
   width: 100%;
   box-sizing: border-box;
   margin: auto;
