--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,8 @@ html, body {
 
 body {
   margin: 0;
-  font-family: sans-serif;
-  background-color: #1f222c;
+  background-color: #171920;
+  width: 100%;
 }
 main {
   width: 100vw;
@@ -16,9 +16,9 @@ main {
 }
 
 .section {
-  height: 60vh;
-  width: 100vh;
-  padding: 2rem;
+  height: fit-content;
+  width: 80%;
+  padding: 5rem;
   box-sizing: border-box;
   text-align: center;
   margin: auto;
@@ -26,7 +26,7 @@ main {
 }
 
 .card {
-  background-color: white;
+  background-color: darkblue;
   padding: 5rem 1rem;
   border-radius: 12px;
   box-shadow: 0 2px 10px lightblue;
@@ -44,10 +44,10 @@ main {
 
 .card h1 {
   margin-bottom: 0.5rem;
-  color: #1e40af;
+  color: #3463ff;
 }
 
 .card p {
   font-size: 1rem;
-  color: #333;
+  color: #b4b4b4;
 }
