--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,8 +6,17 @@
   left: 0;
   right: 0;
   padding: 1rem 0;
+  align-items: center;
+  justify-items: center;
+  justify-content: space-around;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   z-index: 1000;
+  display: flex;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
 }
 
 .navbar-links {
