--- a/src/components/About.css
+++ b/src/components/About.css
@@ -24,7 +24,7 @@ h2 {
 
 .skill-level {
   height: 100%;
-  background-color: blue;
+  background-color: rgb(0, 102, 255);
   color: #000;
   font-weight: bold;
   padding-left: 10px;
@@ -39,7 +39,7 @@ h2 {
 .skill-percent {
   margin-left: auto;
   padding-right: 10px;
-  color: #1f222c;
+  color: lightblue;
 }
 
 .skills-bars:hover .skill-level {
