--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -13,7 +13,7 @@
 .home-card {
   padding: 5rem 1rem;
   border-radius: 12px;
-  box-shadow: 0 2px 10px rgb(0, 0, 0);
+  box-shadow: 0 2px 50px lightblue;
   max-width: 1000px;
   width: 100%;
   box-sizing: border-box;
