--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -48,4 +48,12 @@
   grid-column: span 3 / span 3;
   grid-row-start: 2;
   gap: 10px;
+  transition: color 0.3s ease;
+}
+
+.icon {
+  transition: transform 0.4s ease;
+}
+.icon:hover {
+  transform: translateY(-5px);
 }
