--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,13 +6,13 @@
 }
 
 .footer-button {
-    margin: auto;
-    justify-content: center;
-    transition: transform 0.4s ease;
-    grid-column-start: 2;
-    margin-top: -10%;
-    border-radius: 50%;
-    background-color: rgba(169, 169, 169, 0.082);
+  margin: auto;
+  justify-content: center;
+  transition: transform 0.4s ease;
+  grid-column-start: 2;
+  margin-top: -10%;
+  border-radius: 50%;
+  background-color: rgba(169, 169, 169, 0.082);
 }
 
 .footer-button:hover {
@@ -52,8 +52,9 @@
 }
 
 .icon {
-  transition: transform 0.4s ease;
+  color: gray;
+  transition: color 0.4s ease;
 }
 .icon:hover {
-  transform: translateY(-5px);
+  color: lightblue;
 }
