--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,49 +1,51 @@
 h2 {
-  text-align: center;
-  margin-bottom: 2rem;
-  color: lightgray;
+    text-align: center;
+    margin-bottom: 2rem;
+    color: lightgray;
 }
 
 .skill {
-  margin-bottom: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 
 .skill-name {
-  display: block;
-  margin-bottom: 0.5rem;
-  font-weight: bold;
-  color: gray;
+    display: block;
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+    color: gray;
 }
 
 .skill-bar {
-  background-color: gray;
-  border-radius: 20px;
-  overflow: hidden;
-  height: 24px;
+    background-color: gray;
+    border-radius: 20px;
+    overflow: hidden;
+    height: 24px;
 }
 
 .skill-level {
-  height: 100%;
-  background-color: rgb(0, 102, 255);
-  color: #000;
-  font-weight: bold;
-  padding-left: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  border-radius: 20px;
-  transition: width 1.5s ease-in;
-  width: 0%;
+    height: 100%;
+    background-color: transparent;
+    color: #000;
+    font-weight: bold;
+    padding-left: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    border-radius: 20px;
+    transition: width 1.5s ease-in;
+    width: 0%;
 }
 
 .skill-percent {
-  margin-left: auto;
-  padding-right: 10px;
-  color: lightblue;
+    margin-left: auto;
+    padding-right: 10px;
+    color: lightblue;
+    transition: color 0.5s ease-in;
 }
 
 .skills-bars:hover .skill-level {
-  width: var(--level);
+    width: var(--level);
+    background-color: rgb(0, 102, 255);
 }
 
 .card p {
