--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ body {
 
 .card h1 {
   margin-bottom: 0.5rem;
-  font-size: clamp(2rem, 3.5vw, 5rem);
+  font-size: clamp(3rem, calc(2.5vw + 1rem), 5rem);
   color: #3463ff;
 }
 
