--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,7 +4,8 @@
     border: 2px solid #ccc;
     grid-row: span 2 / span 2;
     margin-right: -20%;
-    
+    max-width: 100%;
+    height: auto;
 }
 
 .text-container {
@@ -14,7 +15,6 @@
 .home-card {
     padding: min(5rem, 8%);
     border-radius: 12px;
-    box-shadow: 0 2px 50px lightblue;
     max-width: 1000px;
     width: 100%;
     box-sizing: border-box;
@@ -27,6 +27,11 @@
     gap: 5px;
     margin-bottom: 10vw;
     margin-top: 10vw;
+    transition: box-shadow 1s ease-in;
+}
+
+.home-card:hover {
+    box-shadow: 0 2px 50px lightblue;
 }
 
 .home-card h1 {
