--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,4 @@
 .navbar {
-  background-color: #1f222c; 
   color: white;
   position: fixed;
   top: 0;
@@ -12,6 +11,10 @@
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   z-index: 1000;
   display: flex;
+}
+
+.navbar-background {
+  background-color: #1f222c; 
 }
 
 .logo {
